# XFighterZone-Linera-Microchain-Game

./: CHANGELOG.md  README.md  all-test-commands.md  docker-compose.yaml  start-docker.sh  start-tournament.sh
LineraOrchestrator/: Dockerfile  Program.cs
LineraOrchestrator/Contracts/friendxfighter/: Cargo.toml
LineraOrchestrator/Contracts/friendxfighter/src/: contract.rs  lib.rs  service.rs  state.rs
LineraOrchestrator/Contracts/tournament/: Cargo.toml
LineraOrchestrator/Contracts/tournament-shared/: Cargo.toml
LineraOrchestrator/Contracts/tournament-shared/src/: lib.rs
LineraOrchestrator/Contracts/tournament/src/: contract.rs  lib.rs  service.rs  state.rs
LineraOrchestrator/Contracts/userxfighter/: Cargo.toml
LineraOrchestrator/Contracts/xfighter/: Cargo.toml
LineraOrchestrator/Controllers/: LineraController.cs  LineraWebController.cs
LineraOrchestrator/Models/: GameDtos.cs  LineraConfig.cs  OrchestratorState.cs
LineraOrchestrator/Services/: AirdropService.cs  BettingService.cs  EnvironmentService.cs  FriendService.cs  LeaderboardService.cs  LineraCliRunner.cs  LineraOrchestratorService.cs  MatchChainService.cs  TournamentService.cs  UserService.cs  WebUserService.cs
LineraOrchestrator/data/: linera_orchestrator_state.json
LineraOrchestrator/linera-publisher/: keystore.json  wallet.json
LineraOrchestrator/linera-users/test1/: appid.txt  keystore.json  wallet.json
LineraOrchestrator/linera-users/test10/: appid.txt  keystore.json  wallet.json
LineraOrchestrator/wasm/: friendxfighter_contract.wasm  friendxfighter_service.wasm  fungible_contract.wasm  fungible_service.wasm  leaderboard_contract.wasm  leaderboard_service.wasm  tournament_contract.wasm  tournament_service.wasm  userxfighter_contract.wasm  userxfighter_service.wasm  xfighter_contract.wasm  xfighter_service.wasm
TestScripts/: reset_data.sh  test_linera_championship.sh  test_matchchain.sh  test_tournament.sh
scripts/: local-dev-start.sh
(+197 files in other folders)
