[package]
name = "friendxfighter"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[dependencies]
async-graphql.workspace = true
bcs.workspace = true
linera-sdk.workspace = true
serde.workspace = true
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { workspace = true, features = ["test", "wasmer"] }
tokio = { workspace = true, features = ["rt", "sync"] }

[[bin]]
name = "friendxfighter_contract"
path = "src/contract.rs"

[[bin]]
name = "friendxfighter_service"
path = "src/service.rs"
