[package]
name = "tournament-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql.workspace = true
futures.workspace = true
linera-sdk.workspace = true
serde_json.workspace = true
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "tournament_shared"
path = "src/lib.rs"