[package]
name = "tournament"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[dependencies]
async-graphql.workspace = true
futures.workspace = true
linera-sdk.workspace = true
serde_json.workspace = true
serde = { version = "1.0", features = ["derive"] }
tournament-shared = { path = "../tournament-shared" }
userxfighter = { path = "../userxfighter" }
log = "0.4"
bcs = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { workspace = true, features = ["test", "wasmer"] }
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
assert_matches.workspace = true
linera-sdk = { workspace = true, features = ["test"] }

[[bin]]
name = "tournament_contract"
path = "src/contract.rs"

[[bin]]
name = "tournament_service"
path = "src/service.rs"